--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -16,7 +16,7 @@ $gray-600: #707070 !default;
 $gray-700: #4D4F51 !default;
 $gray-800: #3f4245 !default;
 $gray-900: #202326 !default;
-$black:    #121212 !default;
+$black:    #141414 !default;
 $transparent:rgba(255, 255, 255, 0) !default;
 // scss-docs-end gray-color-variables
 
@@ -41,11 +41,11 @@ $blue:    #53a3ff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
-$red:     #FF0000 !default;
+$red:     #E63838 !default;
 $orange:  #8C5F06 !default;
 $yellow:  #ffc107 !default;
-$green:   #00d088 !default;
-$teal:    #20fcb0 !default;
+$green:   #067B0F !default;
+$teal:    #067B0F !default;
 $cyan:    #8C5F06 !default;
 // scss-docs-end color-variables
 
