--- a/scss/components/_offcanvas.scss
+++ b/scss/components/_offcanvas.scss
@@ -8,5 +8,5 @@
     transform: translateY(100%);
   }
   body{
-    background: transparent linear-gradient(180deg, #F7F5F0 0%, #F5F2E7 57%, #F5F2E7 77%, #FFFBF4 100%) 0% 0% no-repeat padding-box;
+    background: transparent linear-gradient(180deg, #F7F5F0 0%, #F5F2E7 57%, #F5F2E7 77%, #ffffff 100%) 0% 0% no-repeat padding-box;
   }
