--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -125,13 +125,12 @@
     &::after{
       content: '';
       position: absolute;
-      background-image: url('../../assets/img/arrow_right_gray.svg');
+      background-image: url('../../assets/img/arrow-right.svg');
       width: 20px;
       height: 20px;
       right: 10px;
       background-repeat: no-repeat;
       top: 10px;
-      transform: rotate(180deg);
     }
   }
 }
