feat: Done info detail page

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -339,3 +339,10 @@ input:-webkit-autofill{
   text-overflow:ellipsis;
   color: #575757 !important;
 }
+
+.text-gray62{
+  color: #626262;
+}
+.text-gray2e{
+  color: #2e2e2e;
+}
