fix: indetity verify page select

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -13191,6 +13191,10 @@ body {
   background-image: linear-gradient(54deg, #8C5F06 0%, #B48018 100%) !important;
 }
 
+.btn-lin:active {
+  background: #8C5F06 !important;
+}
+
 .offcanvas-header {
   position: relative;
 }
@@ -13225,6 +13229,10 @@ body {
           transform: translateY(2px);
   background-color: #ebebeb;
   border: none !important;
+}
+
+.form-check .form-check-input.radio-input {
+  background-color: #8C5F06;
 }
 
 .form-switch .form-check-input:checked {
