--- a/scss/all.scss
+++ b/scss/all.scss
@@ -105,6 +105,9 @@
 }
 .btn-lin{
   background-image: linear-gradient(54deg, #8C5F06 0%, #B48018 100%) !important;
+  &:active{
+    background: $primary !important;
+  }
 }
 .offcanvas-header{
   position: relative;
@@ -137,6 +140,9 @@
   transform: translateY(2px);
   background-color: #ebebeb;
   border: none !important;
+  &.radio-input{
+    background-color: $primary;
+  }
 }
 .form-switch .form-check-input:checked{
   background-color: #f1dcb7;
