feat: Done add value history

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -13493,4 +13493,10 @@ input:-webkit-autofill {
 .text-gray2e {
   color: #2e2e2e;
 }
+
+.time-filter-btns .btn-gray.active {
+  background: #8C5F06 !important;
+  color: #fff !important;
+  border: none !important;
+}
 /*# sourceMappingURL=all.css.map */
